# widehabit

./: .dockerignore  .env.production.example  .gitignore  .kilocodemodes  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  diesel.toml  docker-compose.prod.yaml  docker-compose.yaml  project_structure.txt
.codex/skills/widehabit-api/: SKILL.md
.codex/skills/widehabit-api/agents/: openai.yaml
.codex/skills/widehabit-api/references/: api.md
.codex/skills/widehabit-api/scripts/: api.sh  login.sh
.kilocode/rules/: imports.md
docker/: Dockerfile.frontend  Dockerfile.migrations  Dockerfile.service  nginx.frontend.conf  prometheus.yml  promtail.yml
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: compontents.rs  lib.rs  main.rs  pages.rs
frontend/src/api/: client.rs  errors.rs
frontend/src/components/: icons.rs  mod.rs  modals.rs
frontend/style/: auth.css  base.css  calendar.css  component.css  habit-item.css  layout.css  modal.css
migrations/2026-01-06-144155-0000_create_users_and_roles/: down.sql  up.sql
migrations/2026-01-11-122605-0000_new_user_default_role/: down.sql  up.sql
migrations/2026-01-11-173822-0000_add_timestamps/: down.sql  up.sql
migrations/2026-01-11-173908-0000_create_habit_tables/: down.sql  up.sql
migrations/2026-01-14-194721-0000_add_schedules_version_id/: down.sql  up.sql
migrations/2026-01-15-195208-0000_habit_logs_recreation/: down.sql  up.sql
server/: Cargo.toml
server/src/: config.rs  errors.rs  lib.rs  main.rs
server/src/api/: errors.rs  extractors.rs  mod.rs
server/src/api/router/: auth.rs  habit.rs  log.rs  mod.rs  schedule.rs
server/src/db/: entity.rs
server/src/db/repo/: habit.rs  log.rs  schedule.rs  user.rs
server/src/model/: auth.rs  log.rs
server/src/service/: habit.rs  log.rs  mod.rs  schedule.rs  user.rs
shared/: Cargo.toml
shared/src/model/: auth.rs  habit.rs  log.rs  mod.rs  schedule.rs  user.rs
src/: config.rs  errors.rs  lib.rs  main.rs
src/api/: docs.rs  errors.rs  extractors.rs  mod.rs  router.rs  state.rs
src/api/router/: auth.rs  habit.rs  health.rs  mod.rs  schedule.rs
src/db/: entity.rs  mod.rs  repo.rs  schema.rs
src/db/repo/: habit.rs  mod.rs  schedule.rs
src/model/: auth.rs  habit.rs  mod.rs  schedule.rs  user.rs
src/service/: habit.rs  log.rs  schedule.rs  user.rs
