[package]
name = "widehabit"
version = "0.1.0"
edition = "2024"
default-run = "widehabit"
description = "An API for an app designed for habit trackers"

[[bin]]
name = "arghash"
path = "src/bin/arghash.rs"

[dependencies]
# Core dependencies: runtime, HTTP framework and database client.
axum = "0.8.8"
diesel = { version = "2.3.5", features = ["uuid"] }
diesel-async = { version = "0.7.4", features = ["postgres", "bb8"] }
tokio = { version = "1.49.0", features = ["full"] }

# Tracing and logging
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

# OpenAPI documentation
utoipa = "5.4.0"
utoipa-axum = "0.2.0"

# Utility crates
config = { version = "0.15.19", default-features = false }
dotenv = "0.15.0"
argon2 = { version = "0.5.3", features = ["std"] }
rand = "0.9.2"
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["serde", "v4", "fast-rng"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
chrono = "0.4.42"
axum-extra = { version = "0.12.5", features = ["cookie", "typed-header"] }
time = "0.3.44"
validator = { version = "0.20.0", features = ["derive"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[profile.release]
opt-level = 3
lto = true
