[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core dependencies
gloo-net = "0.6.0"
leptos = { version = "0.8.15", features = ["csr"] }

# Serialization
serde.workspace = true
serde_json.workspace = true
serde-aux.workspace = true
shared = { path = "../shared"}
web-sys = {version = "0.3.91", features = ["Storage"]}
leptos_router = "0.8.12"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
