[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8.17", features = ["csr"] }
leptos_router = { version = "0.8.12" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
shared = { path = "../shared" }
wasm-bindgen = "0.2.99"
web-sys = { version = "0.3.76", features = ["Storage", "DragEvent", "DataTransfer"] }
console_error_panic_hook = "0.1.7"
gloo-net = "0.6.0"
