[package]
name = "widehabit-server"
version = "0.1.0"
edition = "2024"
default-run = "widehabit-server"
description = "An API for an app designed for habit trackers"

[[bin]]
name = "arghash"
path = "src/bin/arghash.rs"

[dependencies]
# Core dependencies: runtime, HTTP framework and database client.
axum = "0.8.8"
diesel = { version = "2.3.5", features = ["uuid", "chrono"] }
diesel-async = { version = "0.7.4", features = ["postgres", "bb8"] }
tokio = { version = "1.49.0", features = ["full"] }

# Tracing and logging
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "chrono"]}

# Serialization
serde.workspace = true
serde_json.workspace = true
serde-aux.workspace = true
shared = { path = "../shared"}

# OpenAPI documentation
utoipa.workspace = true
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Utility crates
config = { version = "0.15.19", default-features = false }
dotenv = "0.15.0"
argon2 = { version = "0.5.3", features = ["std"] }
rand = "0.9.2"
axum-prometheus = "0.10.0"
axum-extra = { version = "0.12.5", features = ["cookie", "typed-header"] }
thiserror.workspace = true
uuid.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
time.workspace = true
validator.workspace = true


[profile.release]
opt-level = 3
lto = true
